fix: Centralize CORS configuration in SecurityConfig